# app/swagger.yaml
@@ -93,6 +93,61 @@ paths:
       x-tags:
       - tag: "user"
       x-operationId: "get_user_by_google_id"
+  /users/email/{email}:
+    get:
+      tags:
+      - "user"
+      summary: "Get user by email address"
+      description: ""
+      operationId: "app.get_user_by_email"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "email"
+        in: "path"
+        description: "The email address of the user to fetch."
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        400:
+          description: "Invalid email supplied"
+        404:
+          description: "User not found for email address"
+      x-tags:
+      - tag: "user"
+      x-operationId: "get_user_by_email"
+  /users/email/auth:
+    post:
+      tags:
+      - "user"
+      summary: "Get user by email address"
+      description: ""
+      operationId: "app.get_user_by_email"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Authenticating user object"
+        required: true
+        schema:
+          $ref: "#/definitions/User"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        400:
+          description: "Invalid email supplied"
+        404:
+          description: "User not found for email address"
+      x-tags:
+      - tag: "user"
+      x-operationId: "get_user_by_email"
   /users/{id}:
     get:
       tags:
